--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,10 +2,5 @@ cmake_minimum_required(VERSION 3.10)
 project(httpServer)
 
 
-add_subdirectory(src)
+add_executable(server src/server.c src/connection_handling/connectionHandling.c src/io_helper/io_helper.c)
 
-add_executable(server src/server.c)
-
-target_link_libraries(server
-		PRIVATE
-			${PROJECT_NAME}_lib)
